--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -56,6 +56,21 @@ body {
 .login_card button:focus-visible {
   outline: none !important;
 }
+.imgallery_alert {
+  color: #ff0000;
+  background: #ffc9c9;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 15px;
+  text-align: left;
+  margin-top: 15px;
+  text-indent: 10px;
+}
+.imgallery_alert svg {
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+}
 .imgallery_container {
   background: #3a4d95;
   padding-top: 10px;
@@ -94,7 +109,7 @@ body {
 }
 .imgallery_foldertitle {
   text-align: center;
-  margin-left: 300px;
+  margin-left: 500px;
 }
 .imgallery_sidebar {
   margin-bottom: 20px;
@@ -107,7 +122,7 @@ body {
   background: #fff;
   padding: 30px 30px;
   overflow: auto;
-  height: 730px;
+  height: 720px;
 }
 .imgallery_singlefolder {
   margin: 0px 17px 17px;
@@ -152,6 +167,12 @@ body {
 .toast_header {
   justify-content: space-between;
 }
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: #3a4d95;
+}
 
 @media screen and (max-width: 1000px) and (min-width: 360px) {
   .login_card {
@@ -160,6 +181,7 @@ body {
     padding: 30px 15px;
   }
   .imgallery_backforw {
+    margin: 0;
     justify-content: space-between;
   }
   .imgallery_container {
@@ -187,4 +209,11 @@ body {
     top: 0;
     left: 0;
   }
+  .imgallery_foldertitle {
+    margin: 0;
+ }
+ .imgallery_logout {
+    margin: 10px 0 0;
+    text-align: center;
+ }
 }
